--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,7 +23,7 @@ jobs:
 
 
       - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+        uses: Platane/snk@v3
         with:
           target_branch: output
           build_dir: dist
